--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
+        "@types/intl-tel-input": "^17.0.6",
         "@vitejs/plugin-vue": "^4.0.0",
         "@vue/server-renderer": "^3.2.31",
         "autoprefixer": "^10.4.12",
@@ -19,6 +20,7 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
-        "firebase": "^9.19.1"
+        "firebase": "^9.19.1",
+        "intl-tel-input": "^18.1.0"
     }
 }
