--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "firebase": "^9.19.1",
         "flag-icons": "^6.6.6",
-        "intl-tel-input": "^18.1.0"
+        "intl-tel-input": "^18.1.0",
+        "laravel-vue-pagination": "^4.1.0"
     }
 }
