--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "firebase": "^9.19.1",
         "flag-icons": "^6.6.6",
         "intl-tel-input": "^18.1.0",
-        "laravel-vue-pagination": "^4.1.0"
+        "laravel-vue-pagination": "^4.1.0",
+        "toastify-js": "^1.12.0"
     }
 }
