--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "flag-icons": "^6.6.6",
         "intl-tel-input": "^18.1.0",
         "laravel-vue-pagination": "^4.1.0",
-        "toastify-js": "^1.12.0"
+        "toastify-js": "^1.12.0",
+        "vue3-carousel": "^0.3.0"
     }
 }
